--- a/_posts/tfjs.html
+++ b/_posts/tfjs.html
@@ -508,7 +508,7 @@ function categorizeSpecies() {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
-        'Authorization': 'Bearer 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'
+        'Authorization': 'Bearer '
       },
       body: JSON.stringify({
         "model": "gpt-4-vision-preview",
